@startuml State Pattern - Stock Market Simulation

skinparam classBackgroundColor<<context>> #E6FFE6
skinparam classBackgroundColor<<interface>> #FFE6E6
skinparam classBackgroundColor<<state>> #E6F3FF
skinparam classBackgroundColor<<manager>> #FFF8E1
skinparam classBorderColor #181818
skinparam classFontSize 13
skinparam classAttributeFontSize 12
skinparam arrowColor #181818

' ===== STATE INTERFACE =====
interface LiveStockState <<interface>> {
  {abstract} +calculatePriceChange(): BigDecimal
  {abstract} +getName(): String
}

' ===== CONTEXT =====
class LiveStock <<context>> {
  - symbol: String
  - currentPrice: BigDecimal
  - currentState: LiveStockState
  --
  + updatePrice(): void
  + getCurrentState(): LiveStockState
}

' ===== CONCRETE STATES =====
class GrowingState <<state>> {
  + calculatePriceChange(): BigDecimal
  + getName(): String
  ..
  Price rises +1% to +9%
}

class DecliningState <<state>> {
  + calculatePriceChange(): BigDecimal
  + getName(): String
  ..
  Price falls -1% to -8%
}

class SteadyState <<state>> {
  + calculatePriceChange(): BigDecimal
  + getName(): String
  ..
  Price changes ±2%
}

class BankruptState <<state>> {
  + calculatePriceChange(): BigDecimal
  + getName(): String
  ..
  Price frozen — returns 0%
}

' ===== TRANSITION MANAGER =====
class TransitionManager <<manager>> {
  - transitionTable: Map<StockState, Map<StockState, Double>>
  - random: Random
  --
  + getNextState(currentState: StockState): StockState
}

' ===== RELATIONSHIPS =====
LiveStock "1" o-right- "1" LiveStockState : "currentState"
LiveStock ..> TransitionManager : "uses"

GrowingState   ..|> LiveStockState
DecliningState ..|> LiveStockState
SteadyState    ..|> LiveStockState
BankruptState  ..|> LiveStockState

' ===== NOTES =====
note right of LiveStock
  **Context**
  Delegates price calculation to currentState.
  Asks TransitionManager for next state after each tick.
end note

note right of TransitionManager
  **Manages State Transitions**
  Probability table per state:
  GROWING  → {GROWING 75%, STEADY 20%, DECLINING 5%}
  DECLINING → {DECLINING 65%, STEADY 25%, GROWING 10%, BANKRUPT 1%}
  STEADY   → {STEADY 80%, GROWING 10%, DECLINING 10%}
end note

@enduml
